fix bug pagination disappear on small mobile device screen

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -28,6 +28,7 @@
         .pagination {
             margin-top: 25px;
             text-align: center;
+            margin-bottom: 75px;
         }
     }
 }
